--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
-    "vite-plugin-turbo-console": "0.2.0-beta.7",
+    "vite-plugin-turbo-console": "*",
     "vue-tsc": "^1.8.19"
   }
 }
