--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
-    "vite": "^4.4.11",
-    "vite-plugin-turbo-console": "*",
+    "vite": "^5.0.0",
+    "vite-plugin-turbo-console": "0.3.0-beta.1",
     "vue-tsc": "^1.8.19"
   }
 }
