--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stackblitz-demo",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -19,8 +20,8 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
+    "unplugin-turbo-console": "1.0.1",
     "vite": "^5.0.0",
-    "vite-plugin-turbo-console": "0.3.2",
     "vue-tsc": "^1.8.19"
   }
 }
