--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "unplugin-turbo-console": "1.0.4",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.19"
+  },
+  "stackblitz": {
+    "startCommand": "pnpm update unplugin-turbo-console@latest && pnpm dev"
   }
 }
