--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.2",
     "typescript": "~5.5.3",
-    "unplugin-turbo-console": "1.9.3",
+    "unplugin-turbo-console": "1.9.9-beta.2",
     "vite": "^5.3.3",
     "vue-tsc": "^2.0.26"
   },
